feat: add data files && add temp favicon

--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Random Flowers</title>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
 
+    <script>
+
+    </script>
 </body>
 </html>
