--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
 
                 document.querySelector('.result-wrap').appendChild(wordItemElement);
 
-                // wordItemElement.addEventListener('mouseover', () => {
-                //   document.querySelector('.result-word-desc').innerHTML = wordItem.explanation;
-                // });
+                wordItemElement.addEventListener('mouseover', () => {
+                  document.querySelector('.result-word-desc').innerHTML = wordItem.explanation;
+                });
               },
             );
           })
