Chore: update html

--- a/index.html
+++ b/index.html
@@ -86,6 +86,14 @@
 
                 <div class="result-word-desc"></div>
             </div>
+
+            <div class="btn-item">
+                <div>Word</div>
+
+                <div class="result-wrap"></div>
+
+                <div class="result-word-desc"></div>
+            </div>
         </div>
     </div>
 
@@ -156,7 +164,7 @@
           document.querySelectorAll('.btn-item').forEach(btnItemDOM => {
             btnItemDOM.click();
           });
-        }, 5000);
+        }, 8000);
       }
 
       main();
